# hermes-context-memory

./: .env.local.example  .gitignore  DEV_NOTES.md  GAP_FIXES.md  OVERNIGHT_STATUS.md  README.md  RUNBOOK.md  UPDATED_PLAN.md  config.example.yaml  pyproject.toml
app/: __init__.py  cli.py  config.py  mcp_server.py  models.py  privacy.py  storage.py
app/capture/: __init__.py  browser.py  dedup.py  idle.py  metrics.py  screen.py  tile.py  window.py
app/processing/: __init__.py  embedding.py  ocr.py  semantic_cache.py  sessionizer.py  vlm.py
app/retrieval/: __init__.py  fts.py  search.py  vector.py
app/server/: __init__.py  main.py  routes.py
browser_extension/: background.js  manifest.json  popup.html  popup.js
docs/plans/: 2026-06-02-hermes-context-memory-design.md  2026-06-02-smart-capture-upgrade-design.md
scripts/: check_status.ps1  cleanup_data.ps1  start_service.ps1  stop_service.ps1
tests/: test_config_upgrade.py  test_dedup_cascade.py  test_idle.py  test_metrics.py  test_models_upgrade.py  test_privacy.py  test_recall.py  test_semantic_cache.py  test_sessionizer.py  test_storage.py  test_tile.py
