[project]
name = "hermes-context-memory"
version = "0.1.0"
description = "Local context memory service for Hermes Agent — screen capture, browser context, and semantic recall"
requires-python = ">=3.11"
dependencies = [
    # 核心框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # CLI
    "typer>=0.15.0",
    "rich>=13.0",
    # 数据库
    "sqlite-vec>=0.1.0",
    # 图像处理 / 截图
    "mss>=9.0",
    "Pillow>=10.0",
    "imagehash>=4.3.0",
    # 窗口信息采集（Windows）
    "psutil>=6.0",
    "pygetwindow>=0.0.9",
    # HTTP 客户端（VLM / Embedding API）
    "httpx>=0.27.0",
    # MCP Server
    "mcp[cli]>=1.0.0",
    # 测试
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[project.optional-dependencies]
ocr = ["rapidocr-onnxruntime>=1.4.0"]

[project.scripts]
context-memory = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
